# Cipher

./: .gitignore  Architecture_Details_Feature.md  LICENSE  README.md  TIME_SERIES_INTEGRATION_GUIDE.md  example_timeseries_usage.py  generate_sample_timeseries_data.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.html  test_timeseries_integration.py  test_timeseries_simple.py  weekly_sales_data.csv
app/: index.html  main.js
app/scripts/: api.js  app.js  ui.js  utils.js
app/styles/: data-table.css  main.css
sample_data/: complex_neural_dataset.csv  customers.csv  daily_sales_data.csv  hourly_sales_data.csv  monthly_sales_data.csv
scripts/: dev.py  setup.py
src/: __init__.py  database.py  main.py
src/api/: __init__.py  orchestrator.py  websocket_manager.py
src/core/: config.py
src/ml/: __init__.py  clustering_trainer.py  data_profiler.py  deployer.py  enhanced_trainer.py  explainer.py  model_selector.py  prompt_parser.py  pytorch_models.py  pytorch_nas.py  pytorch_trainer.py  query_suggester.py  timeseries_trainer.py  trainer.py
