[tool.poetry]
name = "cipher-desktop"
version = "1.0.0"
description = "Desktop Cipher Platform with Electron UI and Python Backend"
authors = ["Cipher Team"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
websockets = "^12.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.0"
optuna = "^3.4.0"
shap = "^0.43.0"
sqlmodel = "^0.0.14"
pydantic = "^2.5.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
docker = "^6.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
numpy = "^1.25.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
catboost = "^1.2.0"

[tool.poetry.extras]
dev = ["pytest", "black", "ruff", "pre-commit", "pytest-asyncio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311" 